--- a/TestingApp/TestingApp.csproj
+++ b/TestingApp/TestingApp.csproj
@@ -128,10 +128,10 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Controllers\AuthenticationController.cs" />
+    <Compile Include="Controllers\Auth\AuthenticationController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\JurusanController.cs" />
-    <Compile Include="Controllers\StudentController.cs" />
+    <Compile Include="Controllers\Jurusan\JurusanController.cs" />
+    <Compile Include="Controllers\Student\StudentController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -1620,11 +1620,12 @@
     <Content Include="Assets\fontawesome\webfonts\fa-brands-400.svg" />
     <Content Include="Assets\fontawesome\webfonts\fa-regular-400.svg" />
     <Content Include="Assets\fontawesome\webfonts\fa-solid-900.svg" />
-    <Content Include="Assets\fonts\nunito-v9-latin-600.svg" />
-    <Content Include="Assets\fonts\nunito-v9-latin-700.svg" />
-    <Content Include="Assets\fonts\nunito-v9-latin-800.svg" />
-    <Content Include="Assets\fonts\nunito-v9-latin-regular.svg" />
+    <Content Include="Assets\css\fonts\nunito-v9-latin-600.svg" />
+    <Content Include="Assets\css\fonts\nunito-v9-latin-700.svg" />
+    <Content Include="Assets\css\fonts\nunito-v9-latin-800.svg" />
+    <Content Include="Assets\css\fonts\nunito-v9-latin-regular.svg" />
     <Content Include="Assets\img\Avatar\avatar-1.png" />
+    <Content Include="Assets\img\Bg\bg.jpg" />
     <Content Include="Assets\js\stisla\bootstrap-modal.js" />
     <Content Include="Assets\js\stisla\custom.js" />
     <Content Include="Assets\js\stisla\index-0.js" />
@@ -1729,22 +1730,22 @@
     <Content Include="Assets\fontawesome\webfonts\fa-solid-900.ttf" />
     <Content Include="Assets\fontawesome\webfonts\fa-solid-900.woff" />
     <Content Include="Assets\fontawesome\webfonts\fa-solid-900.woff2" />
-    <Content Include="Assets\fonts\nunito-v9-latin-600.eot" />
-    <Content Include="Assets\fonts\nunito-v9-latin-600.ttf" />
-    <Content Include="Assets\fonts\nunito-v9-latin-600.woff" />
-    <Content Include="Assets\fonts\nunito-v9-latin-600.woff2" />
-    <Content Include="Assets\fonts\nunito-v9-latin-700.eot" />
-    <Content Include="Assets\fonts\nunito-v9-latin-700.ttf" />
-    <Content Include="Assets\fonts\nunito-v9-latin-700.woff" />
-    <Content Include="Assets\fonts\nunito-v9-latin-700.woff2" />
-    <Content Include="Assets\fonts\nunito-v9-latin-800.eot" />
-    <Content Include="Assets\fonts\nunito-v9-latin-800.ttf" />
-    <Content Include="Assets\fonts\nunito-v9-latin-800.woff" />
-    <Content Include="Assets\fonts\nunito-v9-latin-800.woff2" />
-    <Content Include="Assets\fonts\nunito-v9-latin-regular.eot" />
-    <Content Include="Assets\fonts\nunito-v9-latin-regular.ttf" />
-    <Content Include="Assets\fonts\nunito-v9-latin-regular.woff" />
-    <Content Include="Assets\fonts\nunito-v9-latin-regular.woff2" />
+    <Content Include="Assets\css\fonts\nunito-v9-latin-600.eot" />
+    <Content Include="Assets\css\fonts\nunito-v9-latin-600.ttf" />
+    <Content Include="Assets\css\fonts\nunito-v9-latin-600.woff" />
+    <Content Include="Assets\css\fonts\nunito-v9-latin-600.woff2" />
+    <Content Include="Assets\css\fonts\nunito-v9-latin-700.eot" />
+    <Content Include="Assets\css\fonts\nunito-v9-latin-700.ttf" />
+    <Content Include="Assets\css\fonts\nunito-v9-latin-700.woff" />
+    <Content Include="Assets\css\fonts\nunito-v9-latin-700.woff2" />
+    <Content Include="Assets\css\fonts\nunito-v9-latin-800.eot" />
+    <Content Include="Assets\css\fonts\nunito-v9-latin-800.ttf" />
+    <Content Include="Assets\css\fonts\nunito-v9-latin-800.woff" />
+    <Content Include="Assets\css\fonts\nunito-v9-latin-800.woff2" />
+    <Content Include="Assets\css\fonts\nunito-v9-latin-regular.eot" />
+    <Content Include="Assets\css\fonts\nunito-v9-latin-regular.ttf" />
+    <Content Include="Assets\css\fonts\nunito-v9-latin-regular.woff" />
+    <Content Include="Assets\css\fonts\nunito-v9-latin-regular.woff2" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
